--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@tailwindcss/typography": "^0.5.12",
+    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-table": "^8.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.96",
-    "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "crypto-browserify": "^3.12.0",
+    "immer": "^10.1.1",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +51,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/nanoid": "^3.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-redux": "^7.1.33",
+    "@types/react-router-dom": "^5.3.3",
+    "npm-force-resolutions": "^0.0.10",
+    "tailwindcss": "^3.4.3"
+  },
+  "resolutions": {
+    "immer": "10.1.1"
   }
 }
